Fixed Spacing between products, properly displayed product image without stretching and removed some useless queries calls on products.

--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -19,8 +19,8 @@
 }
 
 .productImg {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   display: inline-block;
 }
 
