--- a/src/components/ProductData/ProductData.module.css
+++ b/src/components/ProductData/ProductData.module.css
@@ -30,7 +30,8 @@
 }
 
 .mainImg {
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .details {
